syntax = "proto3";

option java_multiple_files = true;
option java_package = "pt.sd.server.grpc";

// Estrutura da m√©trica enviada pelo dispositivo [cite: 59-63]
message PedidoMetrica {
  string idDispositivo = 1;
  float temperatura = 2;
  float humidade = 3;
  string tempo = 4; // Formato ISO 8601 [cite: 77]
}

message RespostaMetrica {
  string status = 1;
  string mensagem = 2;
}

service MetricasService {
  // Chamada de procedimento remoto para enviar dados [cite: 43]
  rpc EnviarMetrica(PedidoMetrica) returns (RespostaMetrica);
}